--- a/Tarea_4/formulario.html
+++ b/Tarea_4/formulario.html
@@ -18,10 +18,11 @@
             <input style="background-color:palegoldenrod;" type="text" name="apellido">
         </p>
         <p>
-          <label for="domicilio">Domicilio</label>  
+          <label for="domicilio">Domicilio:</label>  
           <input style="background-color: palegreen;"   type="text" name="domicilio">
         </p>
-
+       <label for="ciudad">Ciudad:</label>
+       <input style="background-color: aquamarine;" type="text" name="ciudad">
         <p>
             <label for="comentario">Comentario:</label>
         </p> 
