modificacion en estilos

--- a/Tarea_4/formulario.html
+++ b/Tarea_4/formulario.html
@@ -21,8 +21,9 @@
           <label for="domicilio">Domicilio:</label>  
           <input style="background-color: palegreen;"   type="text" name="domicilio">
         </p>
-       <label for="ciudad">Ciudad:</label>
-       <input style="background-color: aquamarine;" type="text" name="ciudad">
+       <p><label for="ciudad">Ciudad:</label>
+            <input style="background-color: aquamarine;" type="text" name="ciudad">
+        </p>    
         <p>
             <label for="comentario">Comentario:</label>
         </p> 
