agregue codigo postal

--- a/Tarea_4/formulario.html
+++ b/Tarea_4/formulario.html
@@ -23,7 +23,11 @@
         </p>
        <p><label for="ciudad">Ciudad:</label>
             <input style="background-color: aquamarine;" type="text" name="ciudad">
-        </p>    
+        </p>
+        <p>
+            <label for="codigo_postal">Codigo Postal</label>
+            <input style="background-color: bisque;" type="texto" name="codigo_posta">
+        </p>   
         <p>
             <label for="comentario">Comentario:</label>
         </p> 
