--- a/Tarea_4/formulario.html
+++ b/Tarea_4/formulario.html
@@ -25,9 +25,14 @@
             <input style="background-color: aquamarine;" type="text" name="ciudad">
         </p>
         <p>
-            <label for="codigo_postal">Codigo Postal</label>
+            <label for="codigo_postal">Codigo Postal:</label>
             <input style="background-color: bisque;" type="texto" name="codigo_posta">
         </p>   
+        <p>
+            <label for="provincia">Provincia:</label>
+            <input style="background-color: azure;" type="texto" name="provincia">
+
+        </p>
         <p>
             <label for="comentario">Comentario:</label>
         </p> 
